<resources>
    <string name="app_name">HostelApp</string>
    <string name="admin">ADMIN</string>
    <string name="student">STUDENT</string>
    <string name="hello">Hello! welcome to the hostel app</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="US">Enter UserName</string>
    <string name="PW">Enter Password</string>
    <string name="login">LOGIN</string>
</resources>