<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin"
    android:orientation="vertical"
    android:background="@drawable/img_1">

    <EditText
        android:id="@+id/un"
        android:layout_width="252dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:hint="@string/US"
        android:padding="4dp"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/ps"
        android:layout_width="252dp"
        android:layout_height="50dp"
        android:layout_marginTop="55dp"
        android:hint="@string/PW"
        android:padding="4dp"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/log"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:padding="4dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold"/>


</LinearLayout>